<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/ll_btns"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            style="@style/text_view_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:singleLine="false"
            android:text="@string/we_are_waiting_for_your_valuable_suggestions"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/tv_alert_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/please_let_us_know_your_valuable_suggestions"
            android:textColor="@color/colorBlack" />

        <EditText
            android:id="@+id/et_name"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/name"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/et_complaint_type"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/email"
            android:inputType="text"
            android:maxLines="1" />

        <EditText
            android:id="@+id/et_vehicle_no"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/contact_no"
            android:inputType="number"
            android:maxLines="1" />

        <EditText
            android:id="@+id/et_driver_name"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:hint="@string/write_a_suggestion"
            android:inputType="text"
            android:maxLines="4"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/btn_submit"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

    </LinearLayout>

</RelativeLayout>