<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    tools:context=".activities.PublicComplaintsActivity">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar_home" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/toolbar_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/complaint_against_all_public_services" />

            <EditText
                android:id="@+id/et_complaint"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/complaint"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/et_complaint_type"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/complaint_type"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/et_vehicle_no"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/enter_vehicle_no"
                android:inputType="number"
                android:maxLines="1" />

            <EditText
                android:id="@+id/et_drivers_name"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/enter_driver_name"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/et_type_a_complaint"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="8dp"
                android:hint="Please enter the comment!"
                android:inputType="number"
                android:maxLines="4" />

            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/your_details" />

            <EditText
                android:id="@+id/et_your_name"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:hint="@string/your_name"
                android:inputType="text"
                android:maxLines="1" />

            <EditText
                android:id="@+id/et_your_email_id"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/your_email_id"
                android:inputType="textEmailAddress"
                android:maxLines="1" />

            <EditText
                android:id="@+id/et_your_mobile_no"
                style="@style/edit_text_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/your_mobile_no"
                android:inputType="phone"
                android:maxLines="1" />

            <TextView
                android:id="@+id/tv_already_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/false_report_to_police_is_a_punishable_offence"
                android:textColor="@color/colorRed"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/btn_submit"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/submit" />

        </LinearLayout>

    </ScrollView>

    <!--<LinearLayout
        android:id="@+id/ll_btns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/footer"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp">

        <Button
            android:id="@+id/btn_submit"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit" />

    </LinearLayout>-->

    <TextView
        android:id="@+id/footer"
        style="@style/footer_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>