<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SuggestionsActivity">

    <include
        android:id="@+id/toolbar_suggestions"
        layout="@layout/toolbar_home" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_suggestions">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/suggestions_lnr_lyt_margin"
            android:orientation="vertical"
            android:padding="@dimen/suggestions_lnr_lyt_padding">

            <TextView
                style="@style/text_view_style_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:singleLine="false"
                android:text="@string/we_are_waiting_for_your_valuable_suggestions"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pub_complaints_tv_label_margin_top"
                android:paddingLeft="@dimen/pub_complaints_tv_label_padding_left"
                android:paddingStart="@dimen/pub_complaints_tv_label_padding_left"
                android:paddingRight="@dimen/pub_complaints_tv_label_padding_right"
                android:paddingEnd="@dimen/pub_complaints_tv_label_padding_right"
                android:text="@string/name"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/et_name"
                style="@style/edit_text_style_drawable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pub_complaints_et_margin_top"
                android:hint="@string/enter_name"
                android:inputType="text"
                android:maxLines="1"
                tools:ignore="Autofill" />

            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pub_complaints_tv_label_margin_top"
                android:paddingLeft="@dimen/pub_complaints_tv_label_padding_left"
                android:paddingStart="@dimen/pub_complaints_tv_label_padding_left"
                android:paddingRight="@dimen/pub_complaints_tv_label_padding_right"
                android:paddingEnd="@dimen/pub_complaints_tv_label_padding_right"
                android:text="@string/email"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/et_email_id"
                style="@style/edit_text_style_drawable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pub_complaints_et_margin_top"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                tools:ignore="Autofill" />

            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pub_complaints_tv_label_margin_top"
                android:paddingLeft="@dimen/pub_complaints_tv_label_padding_left"
                android:paddingStart="@dimen/pub_complaints_tv_label_padding_left"
                android:paddingRight="@dimen/pub_complaints_tv_label_padding_right"
                android:paddingEnd="@dimen/pub_complaints_tv_label_padding_right"
                android:text="@string/mobile_no"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/et_contact_no"
                style="@style/edit_text_style_drawable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pub_complaints_et_margin_top"
                android:hint="@string/enter_mobile_no"
                android:inputType="phone"
                android:maxLines="1"
                tools:ignore="Autofill" />

            <TextView
                style="@style/text_view_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pub_complaints_tv_label_margin_top"
                android:paddingLeft="@dimen/pub_complaints_tv_label_padding_left"
                android:paddingStart="@dimen/pub_complaints_tv_label_padding_left"
                android:paddingRight="@dimen/pub_complaints_tv_label_padding_right"
                android:paddingEnd="@dimen/pub_complaints_tv_label_padding_right"
                android:text="@string/message"
                android:textColor="@color/colorBlack" />

            <EditText
                android:id="@+id/et_suggestion"
                style="@style/edit_text_style_square"
                android:layout_width="match_parent"
                android:layout_height="@dimen/suggestions_et_height"
                android:layout_marginTop="@dimen/pub_complaints_et_margin_top"
                android:layout_marginBottom="@dimen/pub_complaints_et_margin_bottom"
                android:hint="@string/type_a_message"
                android:inputType="text"
                android:maxLines="1"
                tools:ignore="Autofill" />

            <Button
                android:id="@+id/btn_submit"
                style="@style/button_style"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/pub_complaints_submit_btn_margin_top"
                android:layout_marginBottom="@dimen/pub_complaints_submit_btn_margin_bottom"
                android:text="@string/submit" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>