<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg"
    tools:context=".activities.RtaTowingActivity">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/toolbar_home" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/footer"
        android:layout_below="@id/toolbar_main"
        android:layout_margin="8dp"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <EditText
            android:id="@+id/et_vehicle_no"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_vehicle_no"
            android:inputType="textCapCharacters"
            android:maxLines="1" />

        <EditText
            android:id="@+id/et_captcha"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:enabled="false"
            android:hint="@string/captcha"
            android:inputType="number"
            android:maxLines="1" />

        <EditText
            android:id="@+id/et_enter_above_captcha"
            style="@style/edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/enter_above_captcha"
            android:inputType="number"
            android:maxLines="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/btn_clear"
                style="@style/button_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="0.5"
                android:text="@string/clear" />

            <Button
                android:id="@+id/btn_get_data"
                style="@style/button_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginLeft="2dp"
                android:layout_weight="0.5"
                android:text="@string/get_data" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/footer"
        style="@style/footer_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>