<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/tv_vehicle_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="6dp"
        android:text="@string/auto_fare_chart"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/tv_vehicle_details">

        <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/tbl_rate_chart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingBottom="12dp"
            android:shrinkColumns="*"
            android:stretchColumns="*" />

    </ScrollView>

    <TextView
        android:id="@+id/tv_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/scrollView"
        android:layout_marginTop="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/note"
        android:textColor="@color/colorBlack"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tv_note_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_note"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:text="@string/auto_fare_chart_note"
        android:textColor="@color/colorBlack"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btn_rate_chart_dialog_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_note_text"
        android:layout_marginTop="12dp"
        android:background="@color/colorBlack"
        android:text="@string/close"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>
